minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
spec:
  rules:
  - host: minio.deplatform.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
spec:
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 32000
      name: api
    - port: 80 # the service port
      targetPort: 9001   # The deployment port
      name: console
      protocol: TCP
  type: NodePort
  selector:
    app: minio
